# silver

./: Cargo.toml  LICENSE  README.md  install.py  request.c
src/: editor.rs  file.rs  history.rs  main.rs
src/highlighting/: c.rs  mod.rs  python.rs  rust.rs
syntax/: c.json  python.json  rust.json
