[package]
name = "editor"
version = "0.1.0"
authors = ["PaulSera1 <paulserafimescu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
unicode-segmentation = "1.7"
json = "0.12"
logos = "0.12"
rand = "0.8"
regex = "1.5"
dirs = "3"
